# investor-meeting-intelligence-system

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: database.py  main.py  requirements.txt
backend/api/: __init__.py  auth.py  deps.py
backend/api/routes/: __init__.py  analyze.py  auth.py  chat.py  results.py  traces.py  upload.py
backend/api/schemas/: __init__.py  requests.py  responses.py
backend/models/: user.py
backend/scripts/: manage_users.py  test_chat_llm.py  test_model_comparison.py
backend/services/: __init__.py  chat_agent.py  chat_data_loader.py  chat_prompts.py  chat_tools.py  chat_vector.py  pipeline_runner.py  storage.py
backend/static/: index.html
backend/static/assets/: index-C-kksuTu.css  index-DyIG3UAS.js
frontend/: index.html  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: run_pipeline.py  run_pipeline_v2.py  validate_output.py
src/: __init__.py  cli.py
src/config/: prompts.py  settings.py
src/extraction/: __init__.py  chunker.py  pdf_extractor.py
src/llm/: __init__.py  chains.py  client.py
src/models/: __init__.py  enrichment.py  enums.py  extraction.py  qa_units.py  report.py  segmentation.py  strategic.py
src/pipeline/: __init__.py  graph.py  state.py
src/pipeline_v2/: __init__.py  llm_helpers.py  models.py  orchestrator.py
src/processing/: __init__.py  speaker_resolution.py  topic_aggregation.py
tests/: __init__.py  conftest.py
tests/unit/: test_chunking.py  test_models.py
(+44 files in other folders)
