[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "call-transcript-intelligence"
version = "0.1.0"
description = "Analyzes earnings call transcript PDFs and produces structured analytical reports"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    # Core LLM orchestration
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.2.0",

    # PDF extraction
    "pdfplumber>=0.11.0",

    # Data models & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Tokenization
    "tiktoken>=0.7.0",

    # Text processing
    "rapidfuzz>=3.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
cti = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
